--- a/blockchain/package.json
+++ b/blockchain/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@truffle/hdwallet-provider": "^1.2.2",
     "truffle-hdwallet-provider": "^1.0.17"
   }
 }
