committing while computer is being repaired

--- a/server/.vscode/tasks.json
+++ b/server/.vscode/tasks.json
@@ -37,7 +37,8 @@
                 "/property:GenerateFullPaths=true",
                 "/consoleloggerparameters:NoSummary"
             ],
-            "problemMatcher": "$msCompile"
+            "problemMatcher": "$msCompile",
+            "dependsOn": "build"
         },
         {
             "label": "efcoreMigrate",
