--- a/server/server.csproj
+++ b/server/server.csproj
@@ -16,7 +16,7 @@
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="5.0.4" />
     <PackageReference Include="Nethereum.Autogen.ContractApi" Version="3.6.2" />
     <PackageReference Include="Nethereum.Web3" Version="3.8.0" />
-    <PackageReference Include="Otp.NET" Version="1.2.2" />
+    <PackageReference Include="otp.net" Version="1.2.2" />
   </ItemGroup>
 
   <ItemGroup>
