--- a/.github/workflows/master_appelbreyer.yml
+++ b/.github/workflows/master_appelbreyer.yml
@@ -20,6 +20,11 @@ jobs:
       uses: actions/setup-dotnet@v1
       with:
         dotnet-version: '5.0.x'
+        
+    - name: Set up .NET Core 2.1
+      uses: actions/setup-dotnet@v1
+      with:
+        dotnet-version: '2.1.x'
 
     - name: Build with dotnet
       run: dotnet build --configuration Release
